compiler/testData/diagnostics/tests/regressions/kt2956.fir.kt
val a: String = <!INITIALIZER_TYPE_MISMATCH!>Nothing<!>
